--- a/Ordinary/tictakto/public/index.html
+++ b/Ordinary/tictakto/public/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="en"> 
     <head> 
+        <link rel="stylesheet" href="styles.css">
+
 
     </head>
 
     <body>
+        <h1 class ="title">Welcome to My Tik Tac Toe Game!</h1>
+        
+        <table class="'board" id="board"> 
+
+        </table>
+
+
+        <script src="/script.js"></script>
+
 
     </body>
 </html>
