in the process of javascript tic tac toe to get a lay of the land

--- a/Ordinary/tictakto/public/index.html
+++ b/Ordinary/tictakto/public/index.html
@@ -9,7 +9,22 @@
     <body>
         <h1 class ="title">Welcome to My Tik Tac Toe Game!</h1>
         
-        <table class="'board" id="board"> 
+        <table class="board" id="board"> 
+            <tr class="row-1" id="row-1">
+                <td>place11</td>
+                <td>place12</td>
+                <td>place13</td>
+            </tr>
+            <tr class="row-2" id="row-2">
+                <td>place21</td>
+                <td>place22</td>
+                <td>place23</td>
+            </tr>
+            <tr class="row-3" id="row-3">
+                <td>place31</td>
+                <td>place32</td>
+                <td>place33</td>
+            </tr>
 
         </table>
 
