stop point for now

--- a/Ordinary/tictakto/public/index.html
+++ b/Ordinary/tictakto/public/index.html
@@ -11,22 +11,27 @@
         
         <table class="board" id="board"> 
             <tr class="row-1" id="row-1">
-                <td>place11</td>
-                <td>place12</td>
-                <td>place13</td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
             <tr class="row-2" id="row-2">
-                <td>place21</td>
-                <td>place22</td>
-                <td>place23</td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
             <tr class="row-3" id="row-3">
-                <td>place31</td>
-                <td>place32</td>
-                <td>place33</td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
 
         </table>
+
+        <div class="center-reset-button" id="center-reset-button"> 
+            <button class="reset-button" id="reset-button">Reset Game</button>
+        </div>
+
 
 
         <script src="/script.js"></script>
